--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API for seminar scheduler web app created for MSIT, New Delhi",
   "main": "server.js",
   "scripts": {
-    "start" : "node server",
-    "server" : "nodemon server",
+    "start": "node server",
+    "server": "nodemon server",
     "dev": "npm run server"
   },
   "author": "Anant Mathur",
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.4"
+    "mongoose": "^5.9.4",
+    "nodemon": "^2.0.2"
   }
 }
