--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Anant Mathur",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
     "nodemon": "^2.0.2"
   }
