Admin and contact us

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGOURI=mongodb+srv://seminar-scheduler:89rkXzJCYm@M4Mc@cluster0-kw4zw.mongodb.net/test
 JWTSECRET = abcd1234
+EmailName = Seminar Schedular MSIT
+EmailId = seminarschedularmsit@gmail.com
+EmailPass = qwe123ewq321!
