--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
+    "nodemailer": "^6.4.5",
     "nodemon": "^2.0.2"
   }
 }
