--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-MONGOURI=mongodb+srv://seminar-scheduler:89rkXzJCYm@M4Mc@cluster0-kw4zw.mongodb.net/test
+MONGOURI=mongodb://127.0.0.1:27017/seminar-scheduler-api
 JWTSECRET = abcd1234
 EmailName = Seminar Schedular MSIT
 EmailId = seminarschedularmsit@gmail.com
