Add email and reset password

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGOURI = mongodb+srv://seminar-scheduler:89rkXzJCYm@M4Mc@cluster0-kw4zw.mongodb.net/test
+MONGOURI = mongodb+srv://admin:admin@seminarschedular-0uuts.mongodb.net/test?retryWrites=true&w=majority
 JWTSECRET = abcd1234
 EmailName = Seminar Schedular MSIT
 EmailId = seminarschedularmsit@gmail.com
