--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Anant Mathur & Ankur Gupta",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.6",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
